本地桶加redis桶限流。实现关注与取关时对inbox的处理，实现feed冗余拉取笔记，过滤不公开的笔记，使用score和noteid一起作为游标分页。设计测试用例，覆盖全流程。使用prometheus和grafana面板埋点并统计相关数据可视化，实时监控幂等命中，本地通及redis桶令牌监控等。